send request to buy tree